--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
       - name: 'Extract project from tag'
         id: set-project-from-tag
         run: |
-          version="$(echo "$GITHUB_REF" | sed 's~^refs/tags/v(.)$~\1~')"
+          version="$(echo "$GITHUB_REF" | sed 's~^refs/tags/v\(.*\)$~\1~')"
           echo "extract project: ${GITHUB_REF}, ${version}"
           echo "version=${version}" >> $GITHUB_OUTPUT
       - uses: actions/checkout@v3
