Don't spam HA with unknown and not needed entities
Also fix release pipeline

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,8 +9,7 @@ on:
 jobs:
   publish:
     permissions:
-      contents: read
-      id-token: write
+      contents: write
     name: 'Publish release'
     runs-on: ubuntu-latest
     steps:
