We need to run on older ubuntu-20.04 since it has a libc version compatible with debian 11

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ jobs:
     permissions:
       contents: write
     name: 'Publish release'
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - name: 'Extract project from tag'
         id: set-project-from-tag
